--- a/src/app/auto02/auto02.page.html
+++ b/src/app/auto02/auto02.page.html
@@ -1,35 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Autonomo 02
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
+    <ion-toolbar>
+      <ion-title>
+        Cleusa - Serviços Domésticos
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
     <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
-
-        <ion-slide class="slide_image">
-          <img src="assets/autono021.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono022.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono023.png" alt="">
-        </ion-slide>
-    
-      </ion-slides>
-    
-    
-      <p>Este aqui é o Autonomo de número 02</p>
-      <p>O telefone do Autonomo 02 é </p>
-      <p>O endereço do Autonomo 02 é </p>
-      <p>O CEP do Autonomo 02 é</p>
-      <p>Cidade do Autonomo 02 é </p>
-      <p>Email do Autonomo 02 é</p>
-      <p>Facebook do Autonomo 02 é</p>
-    
-    </ion-content>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/svd.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/svd2.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/svd3.jpg" alt="">
+      </ion-slide>
+  
+    </ion-slides>
+  
+  <br>
+    Cleusa Silva<br><br>
+    Telefone: (43) 99785-1495<br><br>
+    Endereço: AV João Clemente Nº 12<br><br>
+    CEP: 19014-680<br><br>
+    Cidade: Jacarezinho<br><br>
+    Email: servicos_cleusa@gmail.com<br><br>
+    https://www.facebook.com/cleusa.silva
+  
+  </ion-content>
