--- a/src/app/auto05/auto05.page.html
+++ b/src/app/auto05/auto05.page.html
@@ -1,36 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Autonomo 05
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
-
+    <ion-toolbar>
+      <ion-title>
+        Giovane - Eventos
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
     <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
-
-        <ion-slide class="slide_image">
-          <img src="assets/autono051.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono052.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono053.png" alt="">
-        </ion-slide>
-    
-      </ion-slides>
-    
-    
-      <p>Este aqui é o Autonomo de número 05</p>
-      <p>O telefone do Autonomo 05 é </p>
-      <p>O endereço do Autonomo 05 é </p>
-      <p>O CEP do Autonomo 05 é </p>
-      <p>Cidade do Autonomo 05 é </p>
-      <p>Email do Autonomo 05 é</p>
-      <p>Facebook do Autonomo 05 é</p>
-    
-    </ion-content>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/even1.png" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/even2.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/even3.jpg" alt="">
+      </ion-slide>
+  
+    </ion-slides>
+  
+  <br>
+    Giovane Augusto Prado<br><br>
+    Telefone: (14) 99157-6789<br><br>
+    Endereço: R Abravanel Teixeira Nº 59<br><br>
+    CEP: 19801-763<br><br>
+    Cidade: Marília<br><br>
+    Email: prado_giovaneventos@hotmail.com<br><br>
+    https://www.facebook.com/giovane.prado
+  
+  </ion-content>
