--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Home
+      Autonomous 
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+      <ion-img src="/assets/autonomos.png"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Autonomous</ion-card-subtitle>
         <ion-card-title>Bem Vindo ao App Autonomous</ion-card-title>
