--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -1,9 +1,42 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Sobre</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
-  <h2>Quem Somos e bla bla bla</h2>
-</ion-content>
+    <ion-toolbar>
+      <ion-title>
+        Sobre Autonomous
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
+    <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/sobre.png" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/ped2.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/ped3.jpg" alt="">
+      </ion-slide>
+  
+    </ion-slides>
+  
+  <br>
+    O autonomous foi desenvoldido para auxiliar<br> 
+    a busca e procura de trabalhadores<br>
+    autonômos disponíveis na cidade<br>
+    de Ourinhos - SP e Região<br>
+    <br>
+    <br>
+    Versão 1.0.0
+    <br>
+    <br>
+    <br>
+    Copyright © 2019 Autonomous <br>
+    <br>Todos os direitos reservados
+  
+  
+  </ion-content>
