--- a/src/app/auto01/auto01.page.html
+++ b/src/app/auto01/auto01.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Autonomo 01
+      Antônio - Obras
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,26 +11,26 @@
   <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
 
     <ion-slide class="slide_image">
-      <img src="assets/autono011.jpg" alt="">
+      <img src="assets/ped1.jpg" alt="">
     </ion-slide>
 
     <ion-slide class="slide_image">
-      <img src="assets/autono012.jpg" alt="">
+      <img src="assets/ped2.jpg" alt="">
     </ion-slide>
 
     <ion-slide class="slide_image">
-      <img src="assets/autono013.png" alt="">
+      <img src="assets/ped3.jpg" alt="">
     </ion-slide>
 
   </ion-slides>
 
-
-  <p>Este aqui é o Autonomo de número 01</p>
-  <p>O telefone do Autonomo 01 é </p>
-  <p>O endereço do Autonomo 01 é tal</p>
-  <p>O CEP do Autonomo 01 é 19900000</p>
-  <p>Cidade do Autonomo 01 é </p>
-  <p>Email do Autonomo 01 é</p>
-  <p>Facebook do Autonomo 01 é</p>
+<br>
+  Antônio Carlos<br><br>
+  Telefone: (14) 99819-0890<br><br>
+  Endereço: R Alcides Lopes Nº 248<br><br>
+  CEP: 199021-780<br><br>
+  Cidade: Ourinhos<br><br>
+  Email: antonio_car@hotmail.com<br><br>
+  https://www.facebook.com/antonio.carlos
 
 </ion-content>
