--- a/src/app/auto03/auto03.page.html
+++ b/src/app/auto03/auto03.page.html
@@ -1,35 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Autonomo 03
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
+    <ion-toolbar>
+      <ion-title>
+        Douglas - Informática
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
     <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
-
-        <ion-slide class="slide_image">
-          <img src="assets/autono031.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono032.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono033.png" alt="">
-        </ion-slide>
-    
-      </ion-slides>
-    
-    
-      <p>Este aqui é o Autonomo de número 03</p>
-      <p>O telefone do Autonomo 03 é </p>
-      <p>O endereço do Autonomo 03 é </p>
-      <p>O CEP do Autonomo 03 é </p>
-      <p>Cidade do Autonomo 03 é </p>
-      <p>Email do Autonomo 03 é</p>
-      <p>Facebook do Autonomo 03 é</p>
-    
-    </ion-content>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/pc1.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/pc2.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/pc3.jpg" alt="">
+      </ion-slide>
+  
+    </ion-slides>
+  
+  <br>
+    Douglas da Costa<br><br>
+    Telefone: (18) 98130-2015<br><br>
+    Endereço: R 12 de Setembro Nº 564<br><br>
+    CEP: 19287-743<br><br>
+    Cidade: Assis<br><br>
+    Email: doug_costainformatica@hotmail.com<br><br>
+    https://www.facebook.com/douglas.costa
+  
+  </ion-content>
