--- a/src/app/auto04/auto04.page.html
+++ b/src/app/auto04/auto04.page.html
@@ -1,36 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Autonomo 04
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
-
+    <ion-toolbar>
+      <ion-title>
+        Ester - Costura
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content padding>
+  
     <ion-slides paginationClickable=true initialSlide=0 loop=true autoplay=1000 speed=2000 #mySlider>
-
-        <ion-slide class="slide_image">
-          <img src="assets/autono041.jpg" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono042.png" alt="">
-        </ion-slide>
-    
-        <ion-slide class="slide_image">
-          <img src="assets/autono043.png" alt="">
-        </ion-slide>
-    
-      </ion-slides>
-    
-    
-      <p>Este aqui é o Autonomo de número 04</p>
-      <p>O telefone do Autonomo 04 é </p>
-      <p>O endereço do Autonomo 04 é </p>
-      <p>O CEP do Autonomo 04 é </p>
-      <p>Cidade do Autonomo 04 é </p>
-      <p>Email do Autonomo 04 é</p>
-      <p>Facebook do Autonomo 04 é</p>
-    
-    </ion-content>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/cost1.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/cost2.jpg" alt="">
+      </ion-slide>
+  
+      <ion-slide class="slide_image">
+        <img src="assets/cost3.jpg" alt="">
+      </ion-slide>
+  
+    </ion-slides>
+  
+  <br>
+    Ester Pereira de Camargo<br><br>
+    Telefone: (14) 99714-6872<br><br>
+    Endereço: R Lopes Trovão Nº 1857<br><br>
+    CEP: 19638-842<br><br>
+    Cidade: Ourinhos<br><br>
+    Email: est_pereiracamargo@hotmail.com<br><br>
+    https://www.facebook.com/ester.camargo
+  
+  </ion-content>
