add location and rating buttons

--- a/src/app/auto02/auto02.page.html
+++ b/src/app/auto02/auto02.page.html
@@ -32,5 +32,19 @@
     Cidade: Jacarezinho<br><br>
     Email: servicos_cleusa@gmail.com<br><br>
     https://www.facebook.com/cleusa.silva
-  
-  </ion-content>
+  <br>
+  <br>
+  <br>
+  <div>
+    <ion-button expand="full">
+      <ion-icon slot="start" name="pin"></ion-icon>
+      Localização
+    </ion-button>
+  </div>
+  <div>
+    <ion-button expand="full" color="success">
+      Avaliar
+      <ion-icon slot="end" name="star-half"></ion-icon>
+    </ion-button>
+  </div>
+</ion-content>
