--- a/src/app/auto01/auto01.page.html
+++ b/src/app/auto01/auto01.page.html
@@ -32,5 +32,20 @@
   Cidade: Ourinhos<br><br>
   Email: antonio_car@hotmail.com<br><br>
   https://www.facebook.com/antonio.carlos
+<br>
+<br>
+<br>
+<div>
+  <ion-button expand="full">
+    <ion-icon slot="start" name="pin"></ion-icon>
+    Localização
+  </ion-button>
+</div>
+<div>
+  <ion-button expand="full" color="success">
+    Avaliar
+    <ion-icon slot="end" name="star-half"></ion-icon>
+  </ion-button>
+</div>
 
 </ion-content>
