--- a/src/app/auto04/auto04.page.html
+++ b/src/app/auto04/auto04.page.html
@@ -32,5 +32,19 @@
     Cidade: Ourinhos<br><br>
     Email: est_pereiracamargo@hotmail.com<br><br>
     https://www.facebook.com/ester.camargo
-  
-  </ion-content>
+  <br>
+  <br>
+  <br>
+  <div>
+    <ion-button expand="full">
+      <ion-icon slot="start" name="pin"></ion-icon>
+      Localização
+    </ion-button>
+  </div>
+  <div>
+    <ion-button expand="full" color="success">
+      Avaliar
+      <ion-icon slot="end" name="star-half"></ion-icon>
+    </ion-button>
+  </div>
+</ion-content>
